Description Smart Meter

--- a/bina_dataimport.ipynb
+++ b/bina_dataimport.ipynb
@@ -974,7 +974,7 @@
     "\n",
     "**Verfügbarkeit:** Das Dataset ist öffentlich verfügbar und kann durch jede Person heruntergeladen werden.\n",
     "\n",
-    "**Preis:** Das Dataset wird kostenlos zu Verfügung gestellt.\n",
+    "**Preis:** Das Dataset wird kostenlos zur Verfügung gestellt.\n",
     "\n",
     "#### Inhaltliche Analyse und Schwierigkeiten \n",
     "Die drei relevanten CSV-Dateien MainCategoryCatalogue, PlantCategoryCatalogue und SubCategoryCatalogue sind ausgelagerte Kategorien Definitionen. Diese Dateien sind immer gleich aufgebaut. Zuerst wird die ID angegeben und anschliessend die jeweilige Textbeschreibung in verschiedenen Sprachen (de, fr, it und en). In der PlantCategoryCatalogue Datei werden die detaillierten Kraftwerkstypen angegeben."
@@ -2490,34 +2490,34 @@
    "cell_type": "markdown",
    "source": [
     "### Smartmeter Daten Kanton Luzern\n",
-    "**Herausgeber:**\n",
+    "**Herausgeber:** \n",
+    "Centralschweizerischen Kraftwerke AG (CKW)\n",
     "\n",
-    "\n",
-    "**Link:**\n",
-    "\n",
+    "**Link:** \n",
+    "https://axsa4prod4publicdata4sa.blob.core.windows.net/$web/index.html#dataset-b\n",
     "\n",
     "**Beschreibung:**\n",
-    "\n",
+    "In diesem Datenset sind anonymisierte Zählerdaten der Smart Meter im CKW-Versorgungsgebiet. Die einzelnen Datensätze sind dabei pro Gemeine aufgeteilt und geben den Stromverbrauch für die Periode sowie die Anzahl Smart Meter wieder. Grossverbraucher sind in den Datensätzen nicht enthalten.\n",
     "\n",
     "**Zeitraum:**\n",
-    "\n",
+    "Das Datenset wurde bis und mit den Daten von März 2024 heruntergeladen und geht zurück bis Januar 2021.\n",
     "\n",
     "**Zweckerfüllung:**\n",
-    "\n",
+    "Dieses Datenset gibt Aufschluss über den Stromverbrauch in den einzelnen Gemeinden in der Region Luzern. Da noch nicht alle Haushalte mit Smart Metern ausgestattet wurden, geben die Daten jedoch nicht den gesamten Stromverbrauch einer Gemeinde wieder. Die Daten lassen dennoch einige Schlüsse auf das Verhältnis des Verbrauchs zwischen den Gemeinden zu. \n",
     "\n",
     "**Qualität (Glaubwürdigkeit, Nützlichkeit, Interpretierbarkeit, Schlüsselintegrität):**\n",
     "\n",
-    "*Glaubwürdigkeit:* \n",
+    "*Glaubwürdigkeit:* Die Daten sind offiziell von CKW, was diese dementsprechend Glaubwürdig macht. Auswertungen der Daten zeigen, dass zeitweise einige Smart Meter nicht rapportiert haben, jedoch ist der daraus resultierende Gap vernachlässigbar.\n",
     "\n",
-    "*Nützlichkeit:* \n",
+    "*Nützlichkeit:* Die Daten können für eine grobe Aussage über Verhältnisse des Verbrauchs zwischen den Gemeinden herangezogen werden, ganz spezifische Auswertungen sind damit jedoch nicht aussagekräftig, da bei weitem noch nicht alle Haushalte mit Smart Metern ausgestattet sind.\n",
     "\n",
-    "*Interpretierbarkeit:* \n",
+    "*Interpretierbarkeit:* Die Daten sind einfach zu interpretieren, die Spalte \"valueKwh\" gibt direkt den Stromverbrauch in der Periode an und nicht den aktuellen Zählerstand, weshalb keine Umrechnungen vorgenommen werden müssen. Schwieriger wird es mit der Zuweisung zu einer Gemeinde, da nur die PLZ in den Datensätzen vorhanden ist und dieselbe PLZ von mehreren Gemeinden genutzt werden kann. Genaueres dazu wird beim Datensatz PLZ <-> BFS-ID erläutert.\n",
     "\n",
-    "*Schlüsselintegrität:* \n",
+    "*Schlüsselintegrität:* Jeder Datensatz der Messungen ist durch die PLZ und den Timestamp eindeutig. Fehlende Daten einzelner Smart Meter fallen durch eine tiefere Gesamtzahl von Smartmetern pro Gemeinde auf. \n",
     "\n",
-    "**Verfügbarkeit:** \n",
+    "**Verfügbarkeit:** Das Dataset ist öffentlich verfügbar und kann durch jede Person heruntergeladen werden.\n",
     "\n",
-    "**Preis:** \n",
+    "**Preis:** Das Dataset wird kostenlos zur Verfügung gestellt.\n",
     "\n",
     "#### Inhaltliche Analyse und Schwierigkeiten \n"
    ]
@@ -2877,7 +2877,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": ""
+   "source": "Die nachfolgende Darstellung aber zeigt, dass der fehlende Verbrauch der einzelnen Gemeinden auf dem gesamten Stromverbrauch über alle Gemeinden nicht auffällt. Ein Auffüllen der fehlenden Daten wäre hier möglich, wurde aber nicht als Zielführend erachtet. Das Smartmeter Netz ist aktuell noch im Aufbau und gibt damit sowieso nicht den gesamten Stromverbrauch der Gemeinden akkurat wieder. "
   },
   {
    "metadata": {
