--- a/bina_dataimport.ipynb
+++ b/bina_dataimport.ipynb
@@ -45,6 +45,7 @@
    "source": [
     "#Import Modules\n",
     "import os, sqlite3\n",
+    "import geopandas as gpd\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import glob\n",
@@ -57,12 +58,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-06-04T16:44:56.703057Z",
-     "start_time": "2024-06-04T16:44:56.647361Z"
+     "end_time": "2024-06-05T14:29:34.074875Z",
+     "start_time": "2024-06-05T14:29:33.972681Z"
     }
    },
    "outputs": [],
-   "execution_count": 115
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -134,20 +135,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-06-04T13:23:57.752836Z",
-     "start_time": "2024-06-04T13:23:57.750471Z"
+     "end_time": "2024-06-05T14:29:44.979680Z",
+     "start_time": "2024-06-05T14:29:44.976810Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Angegebene Database wurde nicht gefunden\n"
-     ]
-    }
-   ],
-   "execution_count": 14
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -2397,7 +2390,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Bisher wurden sämtliche Daten ohne Zugehörigkeit zu einer Gemeinde importiert. Jetzt fehlt eine Zuordnung eines Meteoparameters inkl. zugehörigier Messstation zu einer Gemeinde. Besonders für solche welche über keine eigene Messtation verfügen. Dieses Mapping wird manuell durchgeführt. Unterstützend wird eine Karte generiert, auf welcher sämtliche Messstationen aufgeführt sind. Die Koordinaten der Messstationen müssen jeweils umgerechnet werden von LV03 auf WGS84. Dazu liefert Swisstopo auf Github ein entsprechendes Skript (Swisstopo, [Online-Quelle](https://github.com/ValentinMinder/Swisstopo-WGS84-LV03/tree/master))."
+    "Bisher wurden sämtliche Daten ohne Zugehörigkeit zu einer Gemeinde importiert. Jetzt fehlt eine Zuordnung eines Meteoparameters inkl. zugehörigier Messstation zu einer Gemeinde. Besonders für solche welche über keine eigene Messtation verfügen. Dieses Mapping wird manuell durchgeführt. Unterstützend wird eine Karte generiert, auf welcher sämtliche Messstationen aufgeführt sind. Die Koordinaten der Messstationen müssen jeweils umgerechnet werden von LV03 auf WGS84. Dazu liefert Swisstopo auf Github ein entsprechendes Skript (Swisstopo, [Online-Quelle](https://github.com/ValentinMinder/Swisstopo-WGS84-LV03/tree/master)). Für die Umrechnung wird die Funktion CHtoWGSlat verwendet."
    ],
    "metadata": {
     "collapsed": false
@@ -2543,8 +2536,140 @@
     "        return d"
    ],
    "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-06-05T14:30:18.074237Z",
+     "start_time": "2024-06-05T14:30:18.064262Z"
+    }
+   },
+   "execution_count": 3
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Die Gemeindegrenzen werden von einer externen Quelle geladen. Die Grenzen werden als Multipolygone auf der Karte eingezeichnet."
+   ],
+   "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'geopandas.geodataframe.GeoDataFrame'>\n",
+      "RangeIndex: 2175 entries, 0 to 2174\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column               Non-Null Count  Dtype   \n",
+      "---  ------               --------------  -----   \n",
+      " 0   gemeinde.BFS_NUMMER  2175 non-null   int64   \n",
+      " 1   gemeinde.NAME        2175 non-null   object  \n",
+      " 2   kanton.KUERZEL       2175 non-null   object  \n",
+      " 3   kanton.NAME          2175 non-null   object  \n",
+      " 4   geometry             2175 non-null   geometry\n",
+      "dtypes: geometry(1), int64(1), object(3)\n",
+      "memory usage: 85.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# read Swiss Cantons Geometry Data (as GeoFrame)\n",
+    "geofilePATH = 'https://raw.githubusercontent.com/sawubona-repo/BINA-FS24-WORK/master/zDiversExamples/Notebook-GeoMapping/DATA/'\n",
+    "geofileNAME = 'ch-municipalities.geojson'\n",
+    "\n",
+    "# Read GeoJSON geometry data into geopandas GeoDataFrame\n",
+    "raw_geodf = gpd.read_file(geofilePATH+geofileNAME)\n",
+    "raw_geodf.info()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-06-05T14:31:00.394284Z",
+     "start_time": "2024-06-05T14:30:21.796036Z"
+    }
+   },
+   "execution_count": 4
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Die Meteostationen werden nun aus der DB geladen. Anschliessend werden die coEast und coNorth umgerechnet und in je einer Spalte ergänzt."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "   bfsID meteoStation meteoParameter     stn                 stnName  \\\n0   1098       ZELURU       rre150h0  ZELURU                  Ruswil   \n1   1002          ENT       rre150h0     ENT               Entlebuch   \n2   1024       ZELURK       rre150h0  ZELURK  Rotback Kantonsstrasse   \n3   1066       ZELUSB       rre150h0  ZELUSB           Schwarzenberg   \n4   1081       ZELUHE       rre150h0  ZELUHE              Herlisberg   \n\n     lawCityName  coEast  coNorth        lat      long  \n0         Ruswil  654513   213594  47.071119  8.156337  \n1      Entlebuch  647935   204165  46.986815  8.068740  \n2          Emmen  662226   215127  47.084228  8.258087  \n3  Schwarzenberg  655587   208155  47.022108  8.169809  \n4    Beromünster  659609   228186  47.201926  8.225350  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>bfsID</th>\n      <th>meteoStation</th>\n      <th>meteoParameter</th>\n      <th>stn</th>\n      <th>stnName</th>\n      <th>lawCityName</th>\n      <th>coEast</th>\n      <th>coNorth</th>\n      <th>lat</th>\n      <th>long</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1098</td>\n      <td>ZELURU</td>\n      <td>rre150h0</td>\n      <td>ZELURU</td>\n      <td>Ruswil</td>\n      <td>Ruswil</td>\n      <td>654513</td>\n      <td>213594</td>\n      <td>47.071119</td>\n      <td>8.156337</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1002</td>\n      <td>ENT</td>\n      <td>rre150h0</td>\n      <td>ENT</td>\n      <td>Entlebuch</td>\n      <td>Entlebuch</td>\n      <td>647935</td>\n      <td>204165</td>\n      <td>46.986815</td>\n      <td>8.068740</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1024</td>\n      <td>ZELURK</td>\n      <td>rre150h0</td>\n      <td>ZELURK</td>\n      <td>Rotback Kantonsstrasse</td>\n      <td>Emmen</td>\n      <td>662226</td>\n      <td>215127</td>\n      <td>47.084228</td>\n      <td>8.258087</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1066</td>\n      <td>ZELUSB</td>\n      <td>rre150h0</td>\n      <td>ZELUSB</td>\n      <td>Schwarzenberg</td>\n      <td>Schwarzenberg</td>\n      <td>655587</td>\n      <td>208155</td>\n      <td>47.022108</td>\n      <td>8.169809</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1081</td>\n      <td>ZELUHE</td>\n      <td>rre150h0</td>\n      <td>ZELUHE</td>\n      <td>Herlisberg</td>\n      <td>Beromünster</td>\n      <td>659609</td>\n      <td>228186</td>\n      <td>47.201926</td>\n      <td>8.225350</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Load List of meteoStations\n",
+    "meteostation_df = pd.read_sql_query(\"SELECT meteoStationsParameter.bfsID, meteoStation, meteoParameter, stn, stnName, lawCityName, coEast, coNorth FROM meteoStationsParameter LEFT JOIN meteoStations ON meteoStation = stn\", connection)\n",
+    "\n",
+    "meteostation_df['lat'] = GPSConverter.CHtoWGSlat('',meteostation_df['coEast'], meteostation_df['coNorth'])\n",
+    "meteostation_df['long'] = GPSConverter.CHtoWGSlng('',meteostation_df['coEast'], meteostation_df['coNorth'])\n",
+    "\n",
+    "meteostation_df.rename(columns={'bfsID':'bfs_ID'})\n",
+    "meteostation_df.head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-06-05T14:31:05.112342Z",
+     "start_time": "2024-06-05T14:31:04.718021Z"
+    }
+   },
+   "execution_count": 5
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Die beiden Datasets werden nun zusammengesetzt, damit die Karte generiert werden kann. Zusätzlich wird ein Filter auf den Kanton Luzern gesetzt, damit werden nicht relevante Gemeinden ausgeblendet. Dies fördert die Übersichtlichkeit."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "     gemeinde.BFS_NUMMER  gemeinde.NAME kanton.KUERZEL kanton.NAME  \\\n501                 1001  Doppleschwand             LU      Luzern   \n502                 1002      Entlebuch             LU      Luzern   \n503                 1004         Flühli             LU      Luzern   \n504                 1004         Flühli             LU      Luzern   \n505                 1005          Hasle             LU      Luzern   \n\n                                              geometry   bfsID meteoStation  \\\n501  MULTIPOLYGON Z (((8.05803 47.02880 604.60250, ...  1001.0       ZELUFT   \n502  MULTIPOLYGON Z (((8.08585 46.90607 1911.16250,...  1002.0          ENT   \n503  MULTIPOLYGON Z (((8.04694 46.78711 2349.03000,...  1004.0          FLU   \n504  MULTIPOLYGON Z (((8.04694 46.78711 2349.03000,...  1004.0       ZELUSO   \n505  MULTIPOLYGON Z (((8.06213 46.90957 1927.70375,...     NaN          NaN   \n\n    meteoParameter     stn             stnName    lawCityName    coEast  \\\n501       rre150h0  ZELUFT  Fontannen / Romoos  Doppleschwand  645527.0   \n502       rre150h0     ENT           Entlebuch      Entlebuch  647935.0   \n503       rre150h0     FLU              Flühli         Flühli  644332.0   \n504       rre150h0  ZELUSO           Sörenberg         Flühli  644745.0   \n505            NaN     NaN                 NaN            NaN       NaN   \n\n      coNorth        lat      long  \n501  207445.0  47.016488  8.037417  \n502  204165.0  46.986815  8.068740  \n503  193311.0  46.889434  8.020323  \n504  186215.0  46.825577  8.025046  \n505       NaN        NaN       NaN  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>gemeinde.BFS_NUMMER</th>\n      <th>gemeinde.NAME</th>\n      <th>kanton.KUERZEL</th>\n      <th>kanton.NAME</th>\n      <th>geometry</th>\n      <th>bfsID</th>\n      <th>meteoStation</th>\n      <th>meteoParameter</th>\n      <th>stn</th>\n      <th>stnName</th>\n      <th>lawCityName</th>\n      <th>coEast</th>\n      <th>coNorth</th>\n      <th>lat</th>\n      <th>long</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>501</th>\n      <td>1001</td>\n      <td>Doppleschwand</td>\n      <td>LU</td>\n      <td>Luzern</td>\n      <td>MULTIPOLYGON Z (((8.05803 47.02880 604.60250, ...</td>\n      <td>1001.0</td>\n      <td>ZELUFT</td>\n      <td>rre150h0</td>\n      <td>ZELUFT</td>\n      <td>Fontannen / Romoos</td>\n      <td>Doppleschwand</td>\n      <td>645527.0</td>\n      <td>207445.0</td>\n      <td>47.016488</td>\n      <td>8.037417</td>\n    </tr>\n    <tr>\n      <th>502</th>\n      <td>1002</td>\n      <td>Entlebuch</td>\n      <td>LU</td>\n      <td>Luzern</td>\n      <td>MULTIPOLYGON Z (((8.08585 46.90607 1911.16250,...</td>\n      <td>1002.0</td>\n      <td>ENT</td>\n      <td>rre150h0</td>\n      <td>ENT</td>\n      <td>Entlebuch</td>\n      <td>Entlebuch</td>\n      <td>647935.0</td>\n      <td>204165.0</td>\n      <td>46.986815</td>\n      <td>8.068740</td>\n    </tr>\n    <tr>\n      <th>503</th>\n      <td>1004</td>\n      <td>Flühli</td>\n      <td>LU</td>\n      <td>Luzern</td>\n      <td>MULTIPOLYGON Z (((8.04694 46.78711 2349.03000,...</td>\n      <td>1004.0</td>\n      <td>FLU</td>\n      <td>rre150h0</td>\n      <td>FLU</td>\n      <td>Flühli</td>\n      <td>Flühli</td>\n      <td>644332.0</td>\n      <td>193311.0</td>\n      <td>46.889434</td>\n      <td>8.020323</td>\n    </tr>\n    <tr>\n      <th>504</th>\n      <td>1004</td>\n      <td>Flühli</td>\n      <td>LU</td>\n      <td>Luzern</td>\n      <td>MULTIPOLYGON Z (((8.04694 46.78711 2349.03000,...</td>\n      <td>1004.0</td>\n      <td>ZELUSO</td>\n      <td>rre150h0</td>\n      <td>ZELUSO</td>\n      <td>Sörenberg</td>\n      <td>Flühli</td>\n      <td>644745.0</td>\n      <td>186215.0</td>\n      <td>46.825577</td>\n      <td>8.025046</td>\n    </tr>\n    <tr>\n      <th>505</th>\n      <td>1005</td>\n      <td>Hasle</td>\n      <td>LU</td>\n      <td>Luzern</td>\n      <td>MULTIPOLYGON Z (((8.06213 46.90957 1927.70375,...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joined_geodf_meteoStn = pd.merge(raw_geodf, meteostation_df, left_on='gemeinde.BFS_NUMMER', right_on='bfsID', how='left')\n",
+    "\n",
+    "joined_geodf_meteoStn = joined_geodf_meteoStn[(joined_geodf_meteoStn['kanton.KUERZEL'] == 'LU')]\n",
+    "joined_geodf_meteoStn.head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-06-05T14:31:08.282101Z",
+     "start_time": "2024-06-05T14:31:08.265120Z"
+    }
+   },
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -2557,23 +2682,6 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "#Load List of meteoStations\n",
-    "meteostation_df = pd.read_sql_query(\"SELECT meteoStationsParameter.bfsID, meteoStation, meteoParameter, stn, stnName, lawCityName, coEast, coNorth FROM meteoStationsParameter LEFT JOIN meteoStations ON meteoStation = stn\", connection)\n",
-    "\n",
-    "meteostation_df['lat'] = GPSConverter.CHtoWGSlat('',meteostation_df['coEast'], meteostation_df['coNorth'])\n",
-    "meteostation_df['long'] = GPSConverter.CHtoWGSlng('',meteostation_df['coEast'], meteostation_df['coNorth'])\n",
-    "\n",
-    "meteostation_df.rename(columns={'bfsID':'bfs_ID'})\n",
-    "meteostation_df.head()\n",
-    "\n",
-    "\n",
-    "\n",
-    "joined_geodf_meteoStn = pd.merge(raw_geodf, meteostation_df, left_on='gemeinde.BFS_NUMMER', right_on='bfsID', how='left')\n",
-    "\n",
-    "joined_geodf_meteoStn = joined_geodf_meteoStn[(joined_geodf_meteoStn['kanton.KUERZEL'] == 'LU')]\n",
-    "\n",
-    "joined_geodf_meteoStn.head(1000)\n",
-    "\n",
     "#Basic Map with Gemeinden\n",
     "map_center = dict(lat=47.07084, lon=8.23502)\n",
     "map_zoom = 8.5\n",
@@ -2582,11 +2690,11 @@
     "    joined_geodf_meteoStn,\n",
     "    geojson=joined_geodf_meteoStn.geometry,\n",
     "    locations=joined_geodf_meteoStn.index,                                 # define feature variable\n",
+    "    #color='gemeinde.NAME',\n",
     "    color_continuous_scale=px.colors.diverging.Geyser,           # define color palette\n",
-    "    labels={'zAnteil_Schweizer':'Anteil Schweizer an der Gesamtbevölkerung 2022'},\n",
-    "\n",
+    "    labels={'gemeinde.NAME':'Gemeinde Kanton Luzern'},\n",
     "    hover_name='gemeinde.NAME',                                       # define mouse over infos\n",
-    "    hover_data={'gemeinde.NAME':True},\n",
+    "    hover_data={'gemeinde.BFS_NUMMER':True},\n",
     "    opacity=0.5,\n",
     "    center=map_center,\n",
     "    zoom=map_zoom,\n",
@@ -2612,8 +2720,10 @@
     "fig.show()"
    ],
    "metadata": {
-    "collapsed": false
-   }
+    "collapsed": false,
+    "is_executing": true
+   },
+   "execution_count": null
   },
   {
    "cell_type": "code",
